--- a/package.json
+++ b/package.json
@@ -1,7 +1,13 @@
 {
   "name": "vue-stepper-ohdnf",
-  "version": "0.1.0",
-  "private": true,
+  "version": "1.0.0",
+  "description": "stepper component for vue.js",
+  "author": {
+    "email": "jupyohong7@gmail.com",
+    "name": "Jupyo Hong",
+    "url": "https://github.com/ohdnf/vue-stepper-ohdnf"
+  },
+  "license": "MIT",
   "scripts": {
     "serve": "vue-cli-service serve",
     "build": "vue-cli-service build",
@@ -9,11 +15,16 @@
   },
   "dependencies": {
     "core-js": "^3.6.5",
-    "vue": "^2.6.11"
+    "vue": "^2.6.11",
+    "vue-flatpickr-component": "^8.1.6",
+    "vue-router": "^3.2.0",
+    "vuex": "^3.4.0"
   },
   "devDependencies": {
     "@vue/cli-plugin-babel": "~4.5.0",
     "@vue/cli-plugin-eslint": "~4.5.0",
+    "@vue/cli-plugin-router": "~4.5.0",
+    "@vue/cli-plugin-vuex": "~4.5.0",
     "@vue/cli-service": "~4.5.0",
     "babel-eslint": "^10.1.0",
     "eslint": "^6.7.2",
